--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -5,7 +5,6 @@
 // @import "node_modules/bootstrap/scss/utilities/_sizing.scss" // Optional Bootstrap Utilites
 @import 'node_modules/slick-carousel/slick/slick.scss'; // Slick carousel
 @import 'node_modules/retinajs/dist/retina.scss';
-@import 'node_modules/jquery-timepicker/jquery.timepicker';
 
 // USER VARIABLES SECTION
 
@@ -28,18 +27,14 @@ $laptop-bg: 1366px;
   }
 }
 
-@include font('roboto', light, 300, '../fonts/Roboto-Thin');
-@include font('roboto', normal, 400, '../fonts/Roboto-Regular');
-@include font('roboto', medium, 500, '../fonts/Roboto-Medium');
-@include font('roboto', bold, 700, '../fonts/Roboto-Bold');
+@include font('lato', bold, 700, '../fonts/Lato-Bold');
+@include font('lato', normal, 400, '../fonts/Lato-Regular');
+@include font('lato', thin, 200, '../fonts/Lato-Thin');
 
-@include font('highwaySansPro', light, 300, '../fonts/PFHighwaySansPro-Light');
-@include font(
-  'highwaySansPro',
-  normal,
-  400,
-  '../fonts/PFHighwaySansPro-Regular'
-);
+@include font('orchidea', bold, 700, '../fonts/OrchideaPro-Bold');
+@include font('orchidea', semibold, 600, '../fonts/OrchideaPro-SemiBold');
+@include font('orchidea', normal, 400, '../fonts/OrchideaPro-Regular');
+@include font('orchidea', thin, 200, '../fonts/OrchideaPro-Light');
 
 // GENERAL DOCUMENT STYLES
 
@@ -49,8 +44,11 @@ $laptop-bg: 1366px;
 }
 .container {
   max-width: 1200px;
-  padding: 0 48px;
+  padding: 0 24px;
   margin: 0 auto;
+  @media screen and (min-width: $tablet-bp) {
+    padding: 0 40px;
+  }
 }
 //hide el
 .visually-hidden {
