--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -5,10 +5,9 @@
   }
 }
 .product-page-breadcrumb {
-  margin: 12px auto;
+  padding: 12px 24px;
   @media screen and (min-width: $tablet-bp) {
-    margin: 24px auto;
-    padding: 0 40px;
+    padding: 24px 40px;
   }
 }
 
@@ -26,7 +25,10 @@
   }
 }
 .product-about {
+  margin-bottom: 34px;
   @media screen and (min-width: $tablet-bp) {
+    display: flex;
+    flex-direction: column-reverse;
     flex-basis: 33.33%;
     min-width: 0;
     padding: 0 40px;
@@ -80,18 +82,14 @@
     }
   }
 }
-.product-about {
-  margin-bottom: 34px;
-}
+
 .product-about-buy {
-  // position: fixed;
-  bottom: 0;
-  // left: 0;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  padding: 12px 22px 8px 22px;
+  padding: 12px 0 8px 0;
   background-color: $white;
-  box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
-  // z-index: 9;
+  z-index: 9;
   transform: translate3d(0, 0, 0);
   @media screen and (min-width: $tablet-bp) {
     position: relative;
@@ -102,6 +100,15 @@
   }
   @media screen and (min-width: $laptop-bg) {
     // padding: 0 0 0 64px;
+  }
+  &.fixed-mobile {
+    @media screen and (max-width: $tablet-bp) {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      padding: 12px 22px 8px 22px;
+      box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
+    }
   }
 }
 .product-about-description {
@@ -152,7 +159,6 @@
 }
 .product-about-buy-color {
   flex-wrap: wrap;
-  padding-top: 25px;
   margin-bottom: 30px;
   li {
     margin-right: 16px;
@@ -160,6 +166,29 @@
       margin-right: 0;
     }
   }
+}
+.product-about-buy-color-text {
+  text-align: center;
+  font-family: $subfamily;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 16px 0 10px 0;
+}
+.product-about-buy-color-text--desktop {
+  text-align: left;
+  display: none;
+  @media screen and (min-width: $tablet-bp) {
+    display: block;
+  }
+}
+.product-about-buy-color-text--mobile {
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+.buy-color-text-sub {
+  color: $gray;
 }
 .product-about-buy-color--desktop {
   display: none;
@@ -174,12 +203,26 @@
     display: none;
   }
 }
-
+.product-about-buy-btn-size {
+  align-self: center;
+  @media screen and (min-width: $tablet-bp) {
+    order: 1;
+    margin-bottom: 10px;
+    font-family: $mainfamily;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    color: $black;
+  }
+}
 .product-about-buy-btns {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 8px;
   @media screen and (min-width: $tablet-bp) {
     flex-direction: column;
+    order: 2;
   }
   @media screen and (min-width: $laptop-bg) {
     flex-direction: row;
@@ -385,4 +428,171 @@
   border-style: solid;
   border-width: 1px;
   border-color: transparent;
+}
+
+.popup-block {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 20;
+}
+.popup-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba($color: $black, $alpha: 0.5);
+  cursor: pointer;
+}
+.popup-block--show {
+  display: block;
+}
+.popup-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.popup-content--popup-about {
+  background-color: $white;
+  padding: 24px 24px 0 24px;
+  @media screen and (min-width: $tablet-bp) {
+    width: 640px;
+    bottom: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+.btn-popup-close {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+}
+.btn-popup-close-icon {
+  width: 16px;
+  height: 16px;
+}
+
+.popup-tabs-btn-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.btn-link-gray--popup-about-wrapper {
+  margin-bottom: 30px;
+}
+.btn-tab-change {
+  @extend .visually-hidden;
+  &:checked + {
+    .btn-tab-change-label {
+      color: $black;
+      &::before {
+        background-color: $black;
+      }
+    }
+  }
+}
+.btn-tab-change-label {
+  position: relative;
+  margin-bottom: 7px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  font-family: $subfamily;
+  color: $averagegray;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    height: 2px;
+    width: 100%;
+    background-color: $averagegray;
+  }
+}
+.popup-tabs-item {
+  display: none;
+  padding-top: 26px;
+  height: 265px;
+
+  flex-direction: column;
+}
+.popup-tabs-item--show {
+  display: flex;
+}
+.popup-tabs-item-inner {
+  overflow-y: scroll;
+  flex-grow: 1;
+  min-height: 0;
+}
+.btn-tab-size {
+  @extend .visually-hidden;
+  &:checked + {
+    .btn-tab-size-label {
+      color: $black;
+      &::before {
+        display: block;
+      }
+    }
+  }
+  &:disabled + {
+    .btn-tab-size-label {
+      color: $gray;
+      .btn-tab-size-label-text {
+        display: inline-block;
+      }
+    }
+  }
+}
+.btn-tab-size-label {
+  display: block;
+  position: relative;
+  padding-left: 28px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  color: $black;
+  &:before {
+    content: '';
+    display: none;
+    position: absolute;
+    left: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 14px;
+    height: 14px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("data:image/svg+xml,%3Csvg fill='none' height='14' viewBox='0 0 14 14' width='14' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m10.06 4.05325-4.39329 4.39334-2.39334-2.38667-.94.94 3.33334 3.33338 5.33329-5.33338zm-3.05996-3.719998c-3.68 0-6.666666 2.986668-6.666666 6.666668 0 3.67998 2.986666 6.66668 6.666666 6.66668 3.67996 0 6.66666-2.9867 6.66666-6.66668 0-3.68-2.9867-6.666668-6.66666-6.666668zm0 12.000048c-2.94667 0-5.33333-2.38671-5.33333-5.33338s2.38666-5.33333 5.33333-5.33333 5.33336 2.38666 5.33336 5.33333-2.38669 5.33338-5.33336 5.33338z' fill='%23000'/%3E%3C/svg%3E");
+  }
+}
+.btn-tab-size-label-text {
+  display: none;
+}
+.btn-tab-size-text-item {
+  padding-left: 28px;
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  color: $gray;
+}
+.tab-size-btn-wrapper {
+  display: none;
+  flex: 0 0 auto;
+  justify-content: center;
+  border-top: 1px solid $neutral;
+  padding: 24px 0 28px 0;
+}
+.tab-size-btn-wrapper--show {
+  display: flex;
+}
+.btn-primary-tab-size {
+  width: 100%;
+  max-width: 287px;
 }
