--- a/app/sass/ui/_btns.scss
+++ b/app/sass/ui/_btns.scss
@@ -240,3 +240,15 @@ input[type='submit'] {
   color: $gray;
   text-decoration: underline;
 }
+
+.btn-white {
+  padding: 4px 16px;
+  border: 1px solid $white;
+  font-size: 16px;
+  line-height: 32px;
+  font-family: $subfamily;
+  color: $white;
+  &:hover {
+    color: $white;
+  }
+}
