--- a/app/sass/_typography.scss
+++ b/app/sass/_typography.scss
@@ -8,6 +8,9 @@ body {
   line-height: 26px;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
+  &.body-stop-sroll {
+    overflow: hidden;
+  }
 }
 
 h1,
