--- a/app/sass/pages/_catalog_page.scss
+++ b/app/sass/pages/_catalog_page.scss
@@ -3,6 +3,350 @@
     overflow-x: hidden;
   }
 }
-.container-mp {
-  padding: 64px 0 45px 0;
+.container-catalog {
+  padding: 64px 15px 42px 15px;
+  @media screen and (min-width: $tablet-bp) {
+    padding: 80px 14px 62px 14px;
+  }
+}
+.catalog-gal {
+  margin-bottom: 24px;
+}
+.catalog-gal-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.catalog-gal-column {
+  position: relative;
+  flex-basis: 50%;
+  @media screen and (min-width: $tablet-bp) {
+    flex-basis: 25%;
+  }
+}
+
+.catalog-pagin-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.catalog-pagin-number-block {
+  display: flex;
+  align-items: center;
+  font-family: $subfamily;
+  font-size: 16px;
+  line-height: 32px;
+  color: $gray;
+}
+.catalog-pagin-btn-block {
+  display: flex;
+  justify-content: center;
+}
+.btn-primary-pagin {
+  padding: 8px 20px;
+  flex-grow: 1;
+  max-width: 284px;
+}
+.catalog-header {
+  @media screen and (min-width: $tablet-bp) {
+    position: relative;
+    z-index: 2;
+  }
+}
+.catalog-header-btn-block {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 3px;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+.catalog-header-back {
+  display: flex;
+  align-items: center;
+  color: $black;
+  font-family: $subfamily;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+  .catalog-header-back-icon {
+    color: $averagegray;
+    width: 14px;
+    height: 13px;
+    margin-right: 20px;
+  }
+  &:hover {
+    color: $black;
+  }
+}
+.btn-show-filter {
+  font-size: 12px;
+  line-height: 24px;
+  font-family: $subfamily;
+  color: $gray;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+.btn-show-filter-icon {
+  width: 17px;
+  height: 16px;
+  margin-left: 8px;
+}
+
+.product-recommend-item--catalog {
+  display: block;
+  max-width: 100%;
+  padding: 8px 3px;
+  @media screen and (min-width: $tablet-bp) {
+    padding: 18px 26px;
+  }
+}
+.product-recommend-item-img--catalog {
+  width: 100%;
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+.catalog-nav-wrapper {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 11;
+  transform: translateX(-100%);
+  visibility: hidden;
+  transition: transform 0.2s ease-in-out, visibility 0s 0.2s;
+  @media screen and (min-width: $tablet-bp) {
+    position: static;
+    transform: translateX(0);
+    visibility: visible;
+  }
+  &.catalog-nav-wrapper--show {
+    transform: translateX(0);
+    visibility: visible;
+    transition: transform 0.2s ease-in-out;
+    .catalog-nav-overlay {
+      transition: opacity 0.2s 0.2s ease-in-out;
+      opacity: 1;
+    }
+  }
+}
+.catalog-nav {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: calc(100% - 63px);
+  background-color: $white;
+  @media screen and (min-width: $tablet-bp) {
+    position: static;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    background-color: transparent;
+    padding: 8px 26px;
+  }
+}
+.catalog-nav-overlay {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: rgba($color: $black, $alpha: 0.5);
+  background-repeat: no-repeat;
+  background-position: right 22px center;
+  background-image: url("data:image/svg+xml,%3Csvg fill='none' height='28' viewBox='0 0 28 28' width='28' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cfilter id='a' color-interpolation-filters='sRGB' filterUnits='userSpaceOnUse' height='28' width='28' x='0' y='0'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0'/%3E%3CfeOffset dy='2'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0'/%3E%3CfeBlend in2='BackgroundImageFix' mode='normal' result='effect1_dropShadow'/%3E%3CfeBlend in='SourceGraphic' in2='effect1_dropShadow' mode='normal' result='shape'/%3E%3C/filter%3E%3Cg filter='url(%23a)'%3E%3Cpath d='m15.1049 12 8.6663-8.66628c.3051-.30512.3051-.79981 0-1.10488-.3052-.30508-.7998-.30512-1.1049 0l-8.6663 8.66626-8.66628-8.66626c-.30512-.30512-.79981-.30512-1.10488 0-.30508.30511-.30512.7998 0 1.10488l8.66626 8.66628-8.66626 8.6663c-.30512.3051-.30512.7998 0 1.1049.15254.1525.3525.2288.55246.2288s.39988-.0763.55246-.2288l8.66624-8.6663 8.6662 8.6663c.1526.1525.3525.2288.5525.2288s.3999-.0763.5525-.2288c.3051-.3052.3051-.7998 0-1.1049z' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E");
+  opacity: 0;
+  transition: opacity 0;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+
+.catalog-nav-filter-block {
+  padding: 26px 48px;
+  flex-grow: 1;
+  overflow-y: scroll;
+  @media screen and (min-width: $tablet-bp) {
+    display: flex;
+    overflow-y: visible;
+    padding: 0;
+    flex-grow: 0;
+  }
+  li {
+    position: relative;
+    @media screen and (min-width: $tablet-bp) {
+      margin-right: 40px;
+      margin-right: 20px;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    @media screen and (min-width: $laptop-bg) {
+      margin-right: 40px;
+    }
+  }
+}
+
+.custom-checkbox-wrapper--catalog-nav {
+  padding: 8px 0;
+}
+.catalog-nav-head {
+  padding: 52px 22px 0 22px;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+.btn-catalog-nav-head {
+  width: 100%;
+  padding: 8px 0 8px 40px;
+  text-align: left;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: $subfamily;
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-image: url("data:image/svg+xml,%3Csvg fill='none' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m14.3334 6-5.3334 6 5.3334 6 .6666-.7499-4.6669-5.2501 4.6669-5.25013z' fill='%23171717'/%3E%3C/svg%3E");
+}
+.catalog-nav-footer {
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: center;
+  padding: 16px 26px;
+  @media screen and (min-width: $tablet-bp) {
+    padding: 0;
+    margin-left: 30px;
+    flex-grow: 1;
+    align-items: center;
+  }
+}
+.btn-primary--catalog-nav-footer {
+  flex-grow: 1;
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+  &.have-item {
+    .catalog-nav-footer-btn-text {
+      &::after {
+        display: block;
+      }
+    }
+  }
+}
+.catalog-nav-footer-btn-text {
+  display: inline-block;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-left: 30px;
+    width: 6px;
+    height: 12px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='12' viewBox='0 0 6 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.666562 0L6 6L0.666562 12L0 11.2501L4.66688 6L0 0.749866L0.666562 0Z' fill='%23fff'/%3E%3C/svg%3E");
+    display: none;
+  }
+}
+.catalog-nav-footer-text-field {
+  font-size: 16px;
+  line-height: 24px;
+  color: $averagegray;
+}
+.btn-spoiler-catalog {
+  padding: 8px 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: $black;
+  font-family: $subfamily;
+  @media screen and (min-width: $tablet-bp) {
+    font-size: 14px;
+  }
+  @media screen and (min-width: $laptop-bg) {
+    font-size: 16px;
+  }
+  &.spoiler--opened {
+    @media screen and (min-width: $tablet-bp) {
+      color: $gold;
+    }
+    .btn-spoiler-catalog-icon {
+      transform: rotate(90deg);
+      @media screen and (min-width: $tablet-bp) {
+        transform: rotate(-90deg);
+      }
+    }
+  }
+}
+.btn-spoiler-catalog-icon {
+  width: 6px;
+  height: 12px;
+  transition: transform $base-duration $base-timing;
+  margin-left: 8px;
+  @media screen and (min-width: $tablet-bp) {
+    transform: rotate(90deg);
+  }
+}
+.spoiler-content {
+  display: none;
+  @media screen and (min-width: $tablet-bp) {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: $white;
+    padding: 14px 24px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+  }
+}
+.product-recommend-btn-heart {
+  display: none;
+  position: absolute;
+  right: 26px;
+  bottom: 56px;
+  z-index: 1;
+  width: 24px;
+  height: 20px;
+  .btn-heart-icon-reccomend {
+    width: 24px;
+    height: 20px;
+  }
+  &.btn-heart--full {
+    &::after {
+      right: -4px;
+      top: -4px;
+    }
+  }
+  @media screen and (min-width: $tablet-bp) {
+    display: flex;
+  }
+}
+.catalog-nav-footer-grid {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+.catalog-nav-footer-grid-change {
+  color: $averagegray;
+  margin-right: 18px;
+  &:active,
+  &.active {
+    color: $gold;
+  }
+  &:last-child {
+    margin-right: 0;
+  }
+}
+.btn-catalog-nav-footer-grid-icon {
+  width: 18px;
+  height: 18px;
 }
