--- a/app/sass/ui/_input.scss
+++ b/app/sass/ui/_input.scss
@@ -13,3 +13,54 @@
     outline: none;
   }
 }
+
+.custom-checkbox-wrapper {
+  display: flex;
+  align-items: center;
+}
+.custom-checkbox {
+  @extend .visually-hidden;
+  &:checked + {
+    .custom-checkbox-check {
+      background-color: $black;
+      border-color: $black;
+      &:after {
+        opacity: 1;
+      }
+    }
+  }
+}
+.custom-checkbox-check {
+  position: relative;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid $gray;
+  border-radius: 4px;
+  background-color: $white;
+  margin-right: 12px;
+  transition: background-color 0.15s ease-in, border-color 0.15s ease-in;
+  &:after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 10px;
+    height: 6px;
+    background-color: transparent;
+    border-left: 2px solid $white;
+    border-bottom: 2px solid $white;
+    top: 2px;
+    left: 2px;
+    transform: rotate(-45deg);
+    opacity: 0;
+    transition: opacity 0.15s ease-in;
+  }
+}
+
+.custom-checkbox-text {
+  white-space: nowrap;
+  font-family: $subfamily;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+}
