--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -41,10 +41,20 @@
     padding: 0 0 0 30px;
   }
 }
-.product-gallery-slider {
+.product-gallery-slider-wrapper {
+  position: relative;
+  width: 100%;
+  padding-top: 464px;
   @media screen and (min-width: $tablet-bp) {
+    padding-top: 68%;
     margin-bottom: 32px;
   }
+}
+.product-gallery-slider {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
   .slick-dots {
     display: flex;
     position: absolute;
