--- a/app/sass/pages/_product_page.scss
+++ b/app/sass/pages/_product_page.scss
@@ -225,6 +225,7 @@
     line-height: 24px;
     letter-spacing: -0.02em;
     color: $black;
+    display: none;
   }
 }
 .product-about-buy-btns {
@@ -480,15 +481,28 @@
   left: 0;
   width: 100%;
 }
+.popup-about-size {
+  @media screen and (min-width: $tablet-bp) {
+    position: static;
+    display: block;
+  }
+}
+.popup-overlay--popup-about {
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
+.btn-popup-close--popup-about {
+  @media screen and (min-width: $tablet-bp) {
+    display: none;
+  }
+}
 .popup-content--popup-about {
   background-color: $white;
   padding: 24px 24px 0 24px;
   @media screen and (min-width: $tablet-bp) {
-    width: 640px;
-    bottom: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: static;
+    padding: 0;
   }
 }
 .btn-popup-close {
