--- a/app/sass/ui/_btns.scss
+++ b/app/sass/ui/_btns.scss
@@ -22,6 +22,14 @@ input[type='submit'] {
   height: 30px;
   padding: 5px;
   &.btn-hamburger--active {
+    .btn-hamburger-icon {
+      &::before {
+        transform: scaleX(0.5) translate(0, 7px) rotate(-28deg);
+      }
+      &::after {
+        transform: scaleX(0.5) translate(-2px, -7px) rotate(28deg);
+      }
+    }
   }
 }
 .btn-hamburger-icon {
@@ -39,6 +47,8 @@ input[type='submit'] {
     width: 20px;
     height: 2px;
     background-color: $black;
+    transition: transform $base-duration $base-timing;
+    transform-origin: left;
   }
   &::before {
     top: -7px;
